# oop_course2_semester2_lab3

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Matrix/: Matrix.cpp  Matrix.h
Tests/: GoogleTest.cpp
files/: matrixA.txt  matrixB.txt
